.helm/adhoc/ingress-redirect.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siibra-explorer-redirect-ingress
  labels:
    name: siibra-explorer-redirect-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: interactive-viewer.apps.hbp.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: trafficcop
            port: 
              number: 8080
  - host: interactive-viewer-ms-5-3-2.apps.hbp.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: trafficcop
            port: 
              number: 8080
  - host: interactive-viewer-expmt.apps.hbp.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: trafficcop
            port: 
              number: 8080

  tls:
  - secretName: siibra-explorer-redirect-1-secret
    hosts:
    - interactive-viewer.apps.hbp.eu
  - secretName: siibra-explorer-redirect-2-secret
    hosts:
    - interactive-viewer-ms-5-3-2.apps.hbp.eu
  - secretName: siibra-explorer-redirect-3-secret
    hosts:
    - interactive-viewer-expmt.apps.hbp.eu
