.helm/adhoc/ppd-ingress-emergency-fallback.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siibra-explorer-main-emergency-fallback-ingress
  labels:
    name: siibra-explorer-main-emergency-fallback-ingress
    fallback: emergency
  annotations:
    nginx.ingress.kubernetes.io/app-root: "/viewer"
spec:
  ingressClassName: nginx
  rules:
  - host: atlases.ebrains.eu
    http:
      paths:
      - pathType: Prefix
        path: "/viewer"
        backend:
          service:
            name: prod-siibra-explorer
            port: 
              number: 8080
  tls:
  - secretName: sxplr-ppd-emergency-fallback-secret
    hosts:
    - atlases.ebrains.eu
