.helm/adhoc/ppd-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siibra-explorer-main-ingress
  labels:
    name: siibra-explorer-main-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: "/viewer"
spec:
  ingressClassName: nginx
  rules:
  - host: siibra-explorer.apps.rke2-3-adacloud.tc.humanbrainproject.eu
    http:
      paths:
      - pathType: Prefix
        path: "/viewer"
        backend:
          service:
            name: prod-siibra-explorer
            port: 
              number: 8080
  tls:
  - secretName: sxplr-ppd-secret
    hosts:
    - siibra-explorer.apps.rke2-3-adacloud.tc.humanbrainproject.eu
